# SPDX-FileCopyrightText: 2022 - 2024 Ali Sajid Imami
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

[package]
name = "yule-logistics"
version = "1.0.0-next.1"
edition = "2021"
readme = "README.md"
description = ""
rust-version = "1.85.0"
repository = "https://github.com/${gh_user}/${project-name}"
license = "MIT OR Apache-2.0"

[lib]
name = "yule_logistics_lib"
path = "src/yule_logistics_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "yule-logistics"
path = "src/yule_logistics/main.rs"

[dependencies]
clap = { version = "4", features = ["string", "unicode", "derive"] }
anyhow = { version = "1", features = ["backtrace"] }
color-eyre = "0.6"

[dev-dependencies]
rstest = "0.18"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 'z' # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Compile the whole crate at once
panic = "abort" # Abort on panic
strip = "symbols" # Strip debug symbols

### Specify / Override the specific lints

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_docs = "forbid"
invalid_rust_codeblocks = "deny"
redundant_explicit_links = "deny"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
